Removes org.apache.felix.servicebinder.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4874 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -59,12 +59,11 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
 # file:lib/bundle/tablelayout.jar \
 #
 
-felix.auto.start.1= file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar \
+felix.auto.start.1= \
  file:lib/bundle/junit.jar
 # file:lib/bundle/shell.jar \
 # file:lib/bundle/bundlerepository.jar \
 # file:lib/bundle/servicebinder.jar \
-#
 
 felix.auto.start.2= \
  reference:file:sc-bundles/util.jar \
