--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -55,12 +55,9 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  org.bouncycastle.crypto.params; \
  org.bouncycastle.crypto.engines; 
 
-felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
- reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
-#reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
-#\
+felix.auto.start.10= \
+ reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar
 # file:lib/bundle/shell.jar \
-#  \
 # file:lib/bundle/servicebinder.jar \
 # file:lib/bundle/tablelayout.jar
 
