--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -1,7 +1,7 @@
 #
 # Framework config properties.
 #
-org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
+org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  javax.swing; \
  javax.swing.event; \
  javax.swing.table; \
