Some call dialog improvements including new icons and modified layout.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4901 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -73,6 +73,8 @@ service.gui.icons.REASON_DIALOG_ICON=resources/images/impl/gui/common/reasonDial
 service.gui.icons.JOIN_ICON=resources/images/impl/gui/common/join.png
 service.gui.icons.JOIN_AS_ICON=resources/images/impl/gui/common/join.png
 service.gui.icons.LEAVE_ICON=resources/images/impl/gui/common/leave.png
+service.gui.icons.HOLD_STATUS_ICON=resources/images/impl/gui/common/holdStatusIcon.png
+service.gui.icons.MUTE_STATUS_ICON=resources/images/impl/gui/common/muteStatusIcon.png
 
 # Status icons
 service.gui.statusicons.USER_ONLINE_ICON=resources/images/impl/gui/common/statusicons/online.png
@@ -92,6 +94,8 @@ service.gui.buttons.HANGUP_BUTTON_PRESSED_BG=resources/images/impl/gui/buttons/h
 service.gui.buttons.STATUS_SELECTOR_BOX=resources/images/impl/gui/buttons/combobox.png
 service.gui.buttons.BUTTON_BG=resources/images/impl/gui/buttons/dialButtonBg.png
 service.gui.buttons.BUTTON_ROLLOVER_BG=resources/images/impl/gui/buttons/dialButtonRolloverBg.png
+service.gui.buttons.CALL_SETTING_BUTTON_BG=resources/images/impl/gui/buttons/callSettingButton.png
+service.gui.buttons.CALL_SETTING_BUTTON_PRESSED_BG=resources/images/impl/gui/buttons/callSettingButtonPressed.png
 service.gui.buttons.ONE_DIAL_BUTTON=resources/images/impl/gui/buttons/one.png
 service.gui.buttons.TWO_DIAL_BUTTON=resources/images/impl/gui/buttons/two.png
 service.gui.buttons.THREE_DIAL_BUTTON=resources/images/impl/gui/buttons/three.png
