--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -50,9 +50,13 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  javax.crypto.interfaces; \
  net.java.sip.communicator.util.launchutils; \
  org.bouncycastle.jce.provider; \
+ org.bouncycastle.crypto; \
  org.bouncycastle.crypto.digests; \
  org.bouncycastle.crypto.macs; \
  org.bouncycastle.crypto.params; \
+ org.bouncycastle.crypto.agreement; \
+ org.bouncycastle.crypto.generators; \
+ org.bouncycastle.crypto.modes; \
  org.bouncycastle.crypto.engines; 
 
 felix.auto.start.10= \
