Add crypto classes to test properties as well.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4979 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -19,9 +19,6 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  org.xml.sax.ext; \
  sun.misc; \
  sun.security.action; \
- javax.crypto; \
- javax.crypto.interfaces; \
- javax.crypto.spec; \
  javax.xml.parsers;\
  org.apache.xml.serialize;\
  javax.xml.transform;\
@@ -40,10 +37,13 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  javax.naming.directory; \
  javax.net; \
  javax.net.ssl; \
- org.bouncycastle.jce.provider; \
+ org.bouncycastle.crypto; \
  org.bouncycastle.crypto.digests; \
  org.bouncycastle.crypto.macs; \
  org.bouncycastle.crypto.params; \
+ org.bouncycastle.crypto.agreement; \
+ org.bouncycastle.crypto.generators; \
+ org.bouncycastle.crypto.modes; \
  org.bouncycastle.crypto.engines; \
  gnu.java.zrtp; \
  gnu.java.zrtp.packets; \
