--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -19,6 +19,7 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  CallHistoryServiceLick \
  JabberProtocolProviderSlick \
  YahooProtocolProviderSlick \
+ MsnProtocolProviderSlick \
  GibberishProtocolProviderServiceLick \
  RssProtocolProviderServiceLick
 
