--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -119,10 +119,16 @@ service.gui.buttons.EDIT_TOOLBAR_BUTTON=resources/images/impl/gui/buttons/editTo
 service.gui.buttons.EDIT_TOOLBAR_BUTTON_PRESSED=resources/images/impl/gui/buttons/editToolbarButtonPressed.png
 service.gui.buttons.DIAL_BUTTON=resources/images/impl/gui/buttons/dialButton.png
 service.gui.buttons.HOLD_BUTTON=resources/images/impl/gui/buttons/holdButton.png
+service.gui.buttons.HOLD_BUTTON_FULL_SCREEN=resources/images/impl/gui/buttons/holdButtonFullScreen.png
 service.gui.buttons.MUTE_BUTTON=resources/images/impl/gui/buttons/muteButton.png
+service.gui.buttons.MUTE_BUTTON_FULL_SCREEN=resources/images/impl/gui/buttons/muteButtonFullScreen.png
 service.gui.buttons.TRANSFER_CALL_BUTTON=resources/images/impl/gui/buttons/transferCallButton.png
 service.gui.buttons.SECURE_BUTTON_ON=resources/images/impl/gui/buttons/secureOn.png
 service.gui.buttons.SECURE_BUTTON_OFF=resources/images/impl/gui/buttons/secureOff.png
+service.gui.buttons.SECURE_VIDEO_ON=resources/images/impl/gui/buttons/secureVideoOn.png
+service.gui.buttons.SECURE_VIDEO_OFF=resources/images/impl/gui/buttons/secureVideoOff.png
+service.gui.buttons.SECURE_AUDIO_ON=resources/images/impl/gui/buttons/secureAudioOn.png
+service.gui.buttons.SECURE_AUDIO_OFF=resources/images/impl/gui/buttons/secureAudioOff.png
 service.gui.buttons.ENCR_VERIFIED=resources/images/impl/gui/buttons/encrypted_verified.png
 service.gui.buttons.ENCR=resources/images/impl/gui/buttons/encrypted.png
 service.gui.buttons.ENCR_DISABLED=resources/images/impl/gui/buttons/encrypted_disabled.png
