--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -21,7 +21,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  YahooProtocolProviderSlick \
  MsnProtocolProviderSlick \
  GibberishProtocolProviderServiceLick \
- RssProtocolProviderServiceLick
+ RssProtocolProviderServiceLick \
+ PopupMessageHandlerSLick
 
 
 # Note that NetworkAddressManagerServiceLick currently runs
