--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -48,7 +48,11 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  gnu.java.zrtp; \
  gnu.java.zrtp.packets; \
  gnu.java.zrtp.utils; \
- gnu.java.zrtp.zidfile
+ gnu.java.zrtp.zidfile; \
+ com.apple.cocoa.foundation; \
+ org.jdesktop.jdic.tray; \
+ com.apple.cocoa.application; \
+ net.java.sip.communicator.service.audionotifier; \
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
@@ -102,7 +106,9 @@ felix.auto.start.6= \
  reference:file:sc-bundles/protocol-mock.jar \
  reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/msghistory.jar \
- reference:file:sc-bundles/callhistory.jar
+ reference:file:sc-bundles/callhistory.jar \
+ reference:file:sc-bundles/systray.jar \
+ reference:file:sc-bundles/notification.jar
 
 felix.auto.start.7= \
  reference:file:sc-bundles/slickless.jar \
@@ -120,7 +126,8 @@ felix.auto.start.7= \
  reference:file:sc-bundles/protocol-icq-slick.jar \
  reference:file:sc-bundles/protocol-rss-slick.jar \
  reference:file:sc-bundles/msghistory-slick.jar \
- reference:file:sc-bundles/callhistory-slick.jar
+ reference:file:sc-bundles/callhistory-slick.jar \
+ reference:file:sc-bundles/popupmessagehandler-slick.jar
 
 felix.auto.start.100= \
  reference:file:sc-bundles/slick-runner.jar
