Fix some missing color resources.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5040 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -139,6 +139,9 @@ service.gui.MAIN_WINDOW_BACKGROUND=FFFFFF
 # Tooltip background color.
 service.gui.TOOLTIP_BACKGROUND=E8E9EF
 
+# The background color for toolbars.
+service.gui.TOOL_BAR_BACKGROUND=414141
+
 # Rollover color for the toolbar button.
 service.gui.TOOL_BAR_ROLLOVER_BACKGROUND=414141
 
