--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -204,6 +204,7 @@ service.systray.MESSAGE_ICON=resources/images/impl/systray/envelope.png
 service.systray.MESSAGE_ICON_WINDOWS=resources/images/impl/systray/envelopeWindows.png
 service.systray.MESSAGE_ICON_MACOSX=resources/images/impl/systray/envelopeMacOSX.png
 service.systray.MESSAGE_ICON_MACOSX_WHITE=resources/images/impl/systray/envelopeMacOSXWhite.png
+service.systray.CONFIGURE_ICON=resources/images/impl/gui/common/configureIcon.png
 
 # dict protocol icons
 service.protocol.dict.PROTOCOL_ICON=resources/images/protocol/dict/dict-16x16.png
