--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -7,6 +7,7 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  javax.swing.table; \
  javax.swing.text; \
  javax.swing.text.html; \
+ javax.swing.text.html.parser; \
  javax.accessibility; \
  javax.swing.plaf; \
  javax.swing.plaf.metal; \
