--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -54,7 +54,10 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; version=1.3.0, \
  org.bouncycastle.crypto.agreement; \
  org.bouncycastle.crypto.generators; \
  org.bouncycastle.crypto.modes; \
- org.bouncycastle.crypto.engines; 
+ org.bouncycastle.crypto.engines; \
+ javax.crypto; \
+ javax.crypto.spec; \
+ javax.crypto.interfaces;
 
 felix.auto.start.10= \
  reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar
