add the possibility to decorate the main window.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5125 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -38,6 +38,7 @@ impl.gui.WINDOW_TRANSPARENCY=180
 impl.gui.IS_WINDOW_DECORATED=true
 impl.gui.IS_WINDOW_BACKGROUND_ENABLED=false
 impl.gui.IS_WINDOW_COLOR_BACKGROUND_ENABLED=true
+impl.gui.IS_WINDOW_IMAGE_BACKGROUND_ENABLED=false
 impl.gui.IS_TEXTURE_BACKGROUND=false
 impl.gui.GREY_HISTORY_ENABLED=false
 
