--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -37,14 +37,6 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  javax.naming.directory; \
  javax.net; \
  javax.net.ssl; \
- org.bouncycastle.crypto; \
- org.bouncycastle.crypto.digests; \
- org.bouncycastle.crypto.macs; \
- org.bouncycastle.crypto.params; \
- org.bouncycastle.crypto.agreement; \
- org.bouncycastle.crypto.generators; \
- org.bouncycastle.crypto.modes; \
- org.bouncycastle.crypto.engines; \
  gnu.java.zrtp; \
  gnu.java.zrtp.packets; \
  gnu.java.zrtp.utils; \
@@ -53,6 +45,15 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.tray; \
  com.apple.cocoa.application; \
  net.java.sip.communicator.service.audionotifier; \
+
+# org.bouncycastle.crypto; \
+# org.bouncycastle.crypto.digests; \
+# org.bouncycastle.crypto.macs; \
+# org.bouncycastle.crypto.params; \
+# org.bouncycastle.crypto.agreement; \
+# org.bouncycastle.crypto.generators; \
+# org.bouncycastle.crypto.modes; \
+# org.bouncycastle.crypto.engines; \
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
