--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -45,15 +45,14 @@ org.osgi.framework.system.packages.extra= org.osgi.framework; ; version=1.3.0, \
  org.jdesktop.jdic.tray; \
  com.apple.cocoa.application; \
  net.java.sip.communicator.service.audionotifier; \
-
-# org.bouncycastle.crypto; \
-# org.bouncycastle.crypto.digests; \
-# org.bouncycastle.crypto.macs; \
-# org.bouncycastle.crypto.params; \
-# org.bouncycastle.crypto.agreement; \
-# org.bouncycastle.crypto.generators; \
-# org.bouncycastle.crypto.modes; \
-# org.bouncycastle.crypto.engines; \
+ org.bouncycastle.crypto; \
+ org.bouncycastle.crypto.digests; \
+ org.bouncycastle.crypto.macs; \
+ org.bouncycastle.crypto.params; \
+ org.bouncycastle.crypto.agreement; \
+ org.bouncycastle.crypto.generators; \
+ org.bouncycastle.crypto.modes; \
+ org.bouncycastle.crypto.engines;
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
