Fixes issue #591 "Menu items randomly appear in the configuration panel" (for now).
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5174 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -681,6 +681,8 @@
 
             <!-- add some eventual profiler args -->
             <jvmarg line="${profiler.args} ${jvmarg.line}"/>
+
+            <sysproperty key="apple.laf.useScreenMenuBar" value="true" />
         </java>
     </target>
 
