separate property for chat window toolbar
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5194 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -14,6 +14,7 @@ service.gui.HTML_TEXT_STYLE=resources/styles/defaultStyle.css
 # impl.gui
 impl.gui.IS_LOOK_AND_FEEL_DECORATED=false
 impl.gui.IS_TOOLBAR_EXTENDED=false
+impl.gui.IS_CHAT_TOOLBAR_EXTENDED=false
 impl.gui.DEFAULT_GROUP_NAME=
 impl.gui.PREFERRED_ACCOUNT_WIZARD=
 impl.gui.TAB_OVERLAP=0
