Addressing issues #630 (Borderless UI), #450 (Empty space at the bottom of chat window with multiple tabs), some other issues with selector boxes (removed below lines). Also aligned the chat window toolbar area and removed the border of the photos in order to make the view simpler.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5196 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -98,7 +98,7 @@ service.gui.GRADIENT_DARK_COLOR=E6E6E6
 service.gui.GRADIENT_LIGHT_COLOR=FFFFFF
 
 # Used for some custom borders, like the border in the chat window.
-service.gui.BORDER_COLOR=8EA0BC
+service.gui.BORDER_COLOR=929292
 
 # Splash screen text color.
 service.gui.SPLASH_SCREEN_TEXT_COLOR=333333
