Windows update now supports password protected sites, https and http redirects. Show dialog if installer file is missing. Stopping update process now iss working. Change of interface language.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5203 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -322,6 +322,10 @@
             dest="${resources}/languages"
             encoding="UTF-8"
             includes="**/*.properties"/>
+        <!-- Copy the default resources to english one, as our defualt
+            language is English and without the resource we cannot excplictly set it.-->
+        <copy file="${sc.basedir}/resources/languages/resources.properties"
+              tofile="${resources}/languages/resources_en.properties"/>
     </target>
 
     <!-- JAVADOC -->
